--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 </head>
 
 <body>
+    <div class="container">
+    <h1>Etch a Sketch</h1>
     <div class="grid">
-
     </div>
     <div class="get-user-input">
-        <input type="text">
+        <input type="text" onfocus="this.value=''" value="Type in a number between 1 and 100">
         <button>Click Me</button>
+    </div>
     </div>
 
 </body>
-
 </html>
