--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
 </head>
 
 <body>
+    <h1>Etch-A-Sketch</h1>
     <div class="container">
-    <h1>Etch a Sketch</h1>
+    <div class="controls">
+        <button class="black">Black</button>
+        <button class="rainbow">Rainbow</button>
+        <button class="grayscale">Grayscale</button>
+
+        <div class="slider-number">16 x 16</div>
+        <input type="range" class="slider" min="1">
+    </div>
     <div class="grid">
     </div>
-    <div class="get-user-input">
-        <input type="text" onfocus="this.value=''" value="Type in a number between 1 and 100">
-        <button>Click Me</button>
-    </div>
-    </div>
 
+</div>
 </body>
 </html>
