--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <h1>Etch-A-Sketch</h1>
     <div class="container">
     <div class="controls">
-        <button class="black">Black</button>
+        <button class="black pressed">Black</button>
         <button class="rainbow">Rainbow</button>
         <button class="grayscale">Grayscale</button>
+        <button class="clear">Clear</button>
 
         <div class="slider-number">16 x 16</div>
         <input type="range" class="slider" min="1">
